<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">action_settings</string>
    <string name="app_name">Birmingham Mobile Groceries</string>
    <string name="option_text">Choose your option</string>
    <string name="truck_button">Bus Owner Login</string>
    <string name="customer_button">Customer</string>
    <string name="login_truck">Login</string>
    <string name="name_truck"></string>
    <string name="password_truck"></string>
    <string name="title_activity_truck_login">Bus Owner Login</string>
    <string name="title_activity_customer">Bus Information</string>
    <string name="title_activity_truck">Bus Owner</string>
    <string name="incorrect_info">Information Incorrect, try again.</string>
    <string name="title_activity_customer_page">CustomerPage</string>
    <string name="truck_button_one">0034</string>
    <string name="truck_button_two">0045</string>
    <string name="truck_button_three">0150</string>
    <string name="truck_button_four">0143</string>
    <string name="view_map">View Bus Locations</string>
    <string name="truck_option_text">Chose an option</string>
    <string name="add_text">Change Item Stock</string>
    <string name="add_item">Add Item</string>
    <string name="title_activity_add_item">Adding Item</string>
    <string name="item_name"></string>
    <string name="item_whole"></string>
    <string name="item_amount"></string>
    <string name="item_retail"></string>
    <string name="item_done">Item has been added</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_view_truck">ViewTruck</string>
    <string name="hello"></string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_view_truck_two">ViewTruckTwo</string>
    <string name="title_activity_view_truck_three">ViewTruckThree</string>
    <string name="title_activity_view_truck_four">ViewTruckFour</string>

</resources>
