<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:textSize="30dp"
        android:text="@string/truck_option_text"/>

    <Button
        android:id="@+id/view_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_map"/>
    <Button
        android:id="@+id/truck_button_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/truck_button_one"/>
    <Button
        android:id="@+id/truck_button_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/truck_button_two"/>
    <Button
        android:id="@+id/truck_button_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/truck_button_three"/>
    <Button
        android:id="@+id/truck_button_four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/truck_button_four"/>
    <Button
        android:id="@+id/truck_button_five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/truck_button_five"/>
</LinearLayout>