<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/material_blue_grey_800">

    <EditText
        android:id="@+id/name_truck"
        android:hint="Username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="24dp"
        android:text="@string/name_truck"
        android:textColorHint="#FFFFFF"
        android:textColor="#ffffffff" />
    <EditText
        android:id="@+id/password_truck"
        android:hint="Password"
        android:layout_width="wrap_content"
        android:inputType="textPassword"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="24dp"
        android:textColorHint="#FFFFFF"
        android:text="@string/password_truck"
        android:textColor="#ffffffff" />
    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_truck"
        android:onClick="login"/>
</LinearLayout>