<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:textSize="30dp"
        android:text="@string/option_text"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/admin_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/admin_button"
            android:onClick="adminLogin"/>

        <Button
            android:id="@+id/truck_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/truck_button"
            android:onClick="truckLogin"/>
        <Button
            android:id="@+id/customer_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customer_button"
            android:onClick="customerPage"/>

    </LinearLayout>
</LinearLayout>